<resources>
    <string name="app_name">Tic Tac Toe</string>
    <string name="action_settings">Settings</string>
    <string name="newgame">New Game</string>
    <string name="win">Win</string>
    <string name="draw">Draw</string>
    <string name="loss">Loss</string>
    <string name="endgame">End Game</string>
    <string name="won">YOU WON!</string>
    <string name="lost">YOU LOST!</string>
    <string name="ydraw">Its a draw!!!</string>
    <string name="lastmatchres">Last match result.</string>
    <string name="result_so_far">Result so far</string>
    <string name="welcome">Welcome!</string>
    <string name="start_game">Start Game</string>
    <string name="quit">Quit</string>
</resources>
