<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/lightCyan"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.letsdowebsite.game.tictak.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:padding="50dp"
        android:id="@+id/welcome"
        android:layout_centerHorizontal="true"
        android:fontFamily="serif"
        android:textSize="28sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:paddingTop="200dp"
        android:layout_alignTop="@id/welcome"
        android:layout_centerHorizontal="true">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:layout_marginRight="4dp"
            android:id="@+id/start_game"
            android:fontFamily="serif"
            android:background="@drawable/button"
            android:text="@string/start_game"
            android:focusableInTouchMode="true"
            android:textSize="24sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:id="@+id/quit"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:fontFamily="serif"
            android:background="@drawable/button"
            android:padding="20dp"
            android:text="@string/quit"
            android:focusableInTouchMode="true"
            android:textSize="24sp"/>
    </LinearLayout>

</RelativeLayout>
